tests/ui/macros/macro-at-most-once-rep.rust2018.stderr
error: the `?` macro repetition operator does not take a separator
  --> $DIR/macro-at-most-once-rep.rs:13:10
   |
LL |     ($(a),?) => {};
   |          ^

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:27:11
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a?);
   |           ^ no rules expected this token in macro call
   |
   = note: while trying to match sequence end

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:28:11
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a?a);
   |           ^ no rules expected this token in macro call
   |
   = note: while trying to match sequence end

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:29:11
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a?a?a);
   |           ^ no rules expected this token in macro call
   |
   = note: while trying to match sequence end

error: unexpected end of macro invocation
  --> $DIR/macro-at-most-once-rep.rs:31:5
   |
LL | macro_rules! barplus {
   | -------------------- when calling this macro
...
LL |     barplus!();
   |     ^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match `+`
  --> $DIR/macro-at-most-once-rep.rs:17:11
   |
LL |     ($(a)?+) => {}; // ok. matches "a+" and "+"
   |           ^

error: unexpected end of macro invocation
  --> $DIR/macro-at-most-once-rep.rs:32:15
   |
LL | macro_rules! barplus {
   | -------------------- when calling this macro
...
LL |     barplus!(a);
   |               ^ missing tokens in macro arguments
   |
note: while trying to match `+`
  --> $DIR/macro-at-most-once-rep.rs:17:11
   |
LL |     ($(a)?+) => {}; // ok. matches "a+" and "+"
   |           ^

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:33:15
   |
LL | macro_rules! barplus {
   | -------------------- when calling this macro
...
LL |     barplus!(a?);
   |               ^ no rules expected this token in macro call
   |
note: while trying to match `+`
  --> $DIR/macro-at-most-once-rep.rs:17:11
   |
LL |     ($(a)?+) => {}; // ok. matches "a+" and "+"
   |           ^

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:34:15
   |
LL | macro_rules! barplus {
   | -------------------- when calling this macro
...
LL |     barplus!(a?a);
   |               ^ no rules expected this token in macro call
   |
note: while trying to match `+`
  --> $DIR/macro-at-most-once-rep.rs:17:11
   |
LL |     ($(a)?+) => {}; // ok. matches "a+" and "+"
   |           ^

error: unexpected end of macro invocation
  --> $DIR/macro-at-most-once-rep.rs:38:5
   |
LL | macro_rules! barstar {
   | -------------------- when calling this macro
...
LL |     barstar!();
   |     ^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match `*`
  --> $DIR/macro-at-most-once-rep.rs:21:11
   |
LL |     ($(a)?*) => {}; // ok. matches "a*" and "*"
   |           ^

error: unexpected end of macro invocation
  --> $DIR/macro-at-most-once-rep.rs:39:15
   |
LL | macro_rules! barstar {
   | -------------------- when calling this macro
...
LL |     barstar!(a);
   |               ^ missing tokens in macro arguments
   |
note: while trying to match `*`
  --> $DIR/macro-at-most-once-rep.rs:21:11
   |
LL |     ($(a)?*) => {}; // ok. matches "a*" and "*"
   |           ^

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:40:15
   |
LL | macro_rules! barstar {
   | -------------------- when calling this macro
...
LL |     barstar!(a?);
   |               ^ no rules expected this token in macro call
   |
note: while trying to match `*`
  --> $DIR/macro-at-most-once-rep.rs:21:11
   |
LL |     ($(a)?*) => {}; // ok. matches "a*" and "*"
   |           ^

error: no rules expected `?`
  --> $DIR/macro-at-most-once-rep.rs:41:15
   |
LL | macro_rules! barstar {
   | -------------------- when calling this macro
...
LL |     barstar!(a?a);
   |               ^ no rules expected this token in macro call
   |
note: while trying to match `*`
  --> $DIR/macro-at-most-once-rep.rs:21:11
   |
LL |     ($(a)?*) => {}; // ok. matches "a*" and "*"
   |           ^

error: aborting due to 12 previous errors

